--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">RickAndMortyTest</string>
+    <string name="item_status">Status %1$s</string>
+    <string name="item_specie">Specie %1$s</string>
+    <string name="item_origin">Origin: %1$s</string>
+    <string name="iv_shows_image_charecater">Shows image charecater</string>
 </resources>
