--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">RickAndMortyTest</string>
-    <string name="item_status">Status %1$s</string>
-    <string name="item_specie">Specie %1$s</string>
+    <string name="item_status">Status: %1$s</string>
+    <string name="item_specie">Specie: %1$s</string>
     <string name="item_origin">Origin: %1$s</string>
     <string name="iv_shows_image_charecater">Shows image charecater</string>
+    <string name="general_error_message">Something went wrong, please try again later</string>
 </resources>
