--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="item_origin">Origin: %1$s</string>
     <string name="item_unknown_origin">Origin: \?</string>
     <string name="iv_shows_image_charecater">Shows image charecater</string>
+    <string name="no_results">No results 😓</string>
     <string name="general_error_message">Something went wrong, please try again later</string>
     <string name="retry">Retry</string>
 </resources>
