--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="no_results">No results 😓</string>
     <string name="general_error_message">Something went wrong, please try again later</string>
     <string name="retry">Retry</string>
+    <string name="episodes">Episodes</string>
 </resources>
